--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "lint": "eslint --ext .ts,.tsx,.vue src",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "vitest"
   },
   "lint-staged": {
     "*.{ts,tsx,vue}": "eslint --cache --fix",
@@ -15,21 +16,33 @@
   },
   "dependencies": {
     "eslint-plugin-prettier": "^4.0.0",
+    "postcss-nested-ancestors": "^2.0.0",
     "vue": "^3.2.25"
   },
   "devDependencies": {
+    "@testing-library/vue": "^6.5.1",
+    "@types/jest": "^27.4.1",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
     "@vitejs/plugin-vue": "^2.2.0",
     "@vitejs/plugin-vue-jsx": "^1.3.7",
+    "autoprefixer": "^10.4.2",
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-vue": "^8.5.0",
+    "happy-dom": "^2.41.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.4",
+    "postcss": "^8.4.7",
+    "postcss-import": "^14.0.2",
     "prettier": "^2.5.1",
+    "sass": "^1.49.9",
+    "stylelint": "^14.5.3",
+    "stylelint-config-standard": "^25.0.0",
+    "tailwindcss": "^3.0.23",
     "typescript": "^4.5.4",
     "vite": "^2.8.0",
+    "vitest": "^0.5.4",
     "vue-tsc": "^0.29.8"
   }
 }
