chore: 🤖 增加version版本的打包和发布
增加version版本的打包和发布

--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:serve": "vitepress serve docs",
+    "gen-version": "node scripts/gen-version",
     "test": "vitest",
-    "build:components": "node ./scripts/build.js"
+    "build:components": "npm run gen-version && node ./scripts/build.js"
   },
   "dependencies": {
     "vue": "^3.2.25"
