--- a/cli/package.json
+++ b/cli/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsnd ./src/index.ts create",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/fs-extra": "^9.0.13",
     "commander": "^9.2.0",
     "fs-extra": "^10.1.0",
     "inquirer": "^8.2.2",
