--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "ts-node": "^10.7.0",
     "typescript": "^4.5.4",
     "vite": "^2.8.0",
-    "vitepress": "^0.22.3",
+    "vitepress": "^1.0.0-alpha.2",
     "vitepress-theme-demoblock": "^1.4.2",
     "vitest": "^0.6.1",
     "vue-tsc": "^0.29.8"
