--- a/package.json
+++ b/package.json
@@ -16,18 +16,24 @@
     "vue": "^3.2.37"
   },
   "devDependencies": {
+    "@types/node": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
     "@vitejs/plugin-vue": "^3.0.0",
     "@vitejs/plugin-vue-jsx": "^2.0.0",
+    "autoprefixer": "^10.4.7",
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.2.0",
+    "postcss": "^8.4.14",
     "prettier": "^2.7.1",
+    "sass": "^1.54.0",
+    "tailwindcss": "^3.1.6",
     "typescript": "^4.6.4",
     "vite": "^3.0.0",
     "vitepress": "^1.0.0-alpha.4",
+    "vitepress-theme-demoblock": "^1.4.2",
     "vue-tsc": "^0.38.4"
   }
 }
