--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:serve": "vitepress serve docs",
-    "test": "vitest"
+    "test": "vitest",
+    "build:components": "node ./scripts/build.cjs"
   },
   "dependencies": {
     "vue": "^3.2.37"
