--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "tailwindcss": "^3.1.6",
     "typescript": "^4.6.4",
     "vite": "^3.0.0",
-    "vitepress": "^1.0.0-alpha.4",
+    "vitepress": "1.0.0-alpha.8",
     "vitepress-theme-demoblock": "^1.4.2",
     "vitest": "^0.19.0",
     "vue-tsc": "^0.38.4"
